feat: separate ingress and egress
