# internal/kafka/internal/api/private/model_managed_kafka_capacity.go
@@ -3,7 +3,7 @@
  *
  * Kafka Service Fleet Manager APIs that are used by internal services e.g kas-fleetshard operators.
  *
- * API version: 1.4.0
+ * API version: 1.5.0
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
  */
 
@@ -11,10 +11,11 @@ package private
 
 // ManagedKafkaCapacity struct for ManagedKafkaCapacity
 type ManagedKafkaCapacity struct {
-	IngressEgressThroughputPerSec string `json:"ingressEgressThroughputPerSec,omitempty"`
-	TotalMaxConnections           int32  `json:"totalMaxConnections,omitempty"`
-	MaxDataRetentionSize          string `json:"maxDataRetentionSize,omitempty"`
-	MaxPartitions                 int32  `json:"maxPartitions,omitempty"`
-	MaxDataRetentionPeriod        string `json:"maxDataRetentionPeriod,omitempty"`
-	MaxConnectionAttemptsPerSec   int32  `json:"maxConnectionAttemptsPerSec,omitempty"`
+	IngressThroughputPerSec     string `json:"ingressThroughputPerSec,omitempty"`
+	EgressThroughputPerSec      string `json:"egressThroughputPerSec,omitempty"`
+	TotalMaxConnections         int32  `json:"totalMaxConnections,omitempty"`
+	MaxDataRetentionSize        string `json:"maxDataRetentionSize,omitempty"`
+	MaxPartitions               int32  `json:"maxPartitions,omitempty"`
+	MaxDataRetentionPeriod      string `json:"maxDataRetentionPeriod,omitempty"`
+	MaxConnectionAttemptsPerSec int32  `json:"maxConnectionAttemptsPerSec,omitempty"`
 }
